@@ -15,13 +15,13 @@ proj.file-type = 'normal'
 guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                             'windows': [{'name': 'VsP9AM1ogLRvgyGcPNIomhVGfK'\
         'cv9m8S',
-        'size-state': 'maximized',
+        'size-state': '',
         'type': 'dock',
         'view': {'area': 'tall',
                  'current_pages': [1,
                                    5],
                  'notebook_display': 'normal',
-                 'notebook_percent': 0.17897897897897896,
+                 'notebook_percent': 0.15283582089552239,
                  'override_title': None,
                  'pagelist': [('debug-breakpoints',
                                'tall',
@@ -112,7 +112,7 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                               ('browser',
                                'tall',
                                0,
-                               None),
+                               {}),
                               ('debug-watch',
                                'tall',
                                1,
@@ -135,7 +135,7 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'pagelist': [('bookmarks',
                       'wide',
                       1,
-                      None),
+                      {}),
                      ('messages',
                       'wide',
                       2,
@@ -174,11 +174,11 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                      ('debug-data',
                       'wide',
                       0,
-                      None),
+                      {}),
                      ('testing',
                       'wide',
                       0,
-                      None)],
+                      {})],
         'primary_view_state': {'editor_states': ('horizontal',
         0.49706314243759175,
         {'bookmarks': ([(loc('../snake/snake/snakefile.sample'),
@@ -558,13 +558,13 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
         'selection_end': 4957,
         'selection_start': 4957},
                            loc('setup.py'): {'attrib-starts': [('load_info',
-        15)],
-        'first-line': 0,
+        19)],
+        'first-line': 4,
         'folded-linenos': [],
-        'sel-line': 19,
-        'sel-line-start': 451,
-        'selection_end': 515,
-        'selection_start': 515}},
+        'sel-line': 23,
+        'sel-line-start': 498,
+        'selection_end': 562,
+        'selection_start': 562}},
          'has-focus': False}),
                                'open_files': [u'paragrep/__init__.py',
         u'setup.py']},
@@ -577,9 +577,9 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                  'tab_location': 'left',
                  'user_data': {}},
         'window-alloc': (0,
-                         25,
-                         1270,
-                         919)},
+                         22,
+                         1680,
+                         967)},
         {'name': 'nz8sdCZFY1fM2ZHHgdqsqa9sPhFohhIY',
          'size-state': '',
          'type': 'panel-tall',
@@ -605,11 +605,18 @@ guimgr.overall-gui-state = {'windowing-policy': 'combined-window',
                           378,
                           1102,
                           116)}]}
-guimgr.recent-documents = [loc('setup.py'),
-                           loc('paragrep/__init__.py')]
+guimgr.recent-documents = [loc('paragrep/__init__.py'),
+                           loc('setup.py')]
 guimgr.visual-state = {loc('paragrep/__init__.py'): {'attrib-starts': [],
         'first-line': 0,
         'folded-linenos': [],
+        'sel-line': 0,
+        'sel-line-start': 0,
+        'selection_end': 0,
+        'selection_start': 0},
+                       loc('unknown:<untitled> #1'): {'attrib-starts': [],
+        'first-line': 0,
+        'history': {},
         'sel-line': 0,
         'sel-line-start': 0,
         'selection_end': 0,
@@ -622,13 +629,6 @@ guimgr.visual-state = {loc('paragrep/__init__.py'): {'attrib-starts': [],
         'selection_end': 0,
         'selection_start': 0},
                        loc('unknown:<untitled> #3'): {'attrib-starts': [],
-        'first-line': 0,
-        'history': {},
-        'sel-line': 0,
-        'sel-line-start': 0,
-        'selection_end': 0,
-        'selection_start': 0},
-                       loc('unknown:<untitled> #1'): {'attrib-starts': [],
         'first-line': 0,
         'folded-linenos': [],
         'history': {},
